internal/octogo/testdata/decl_redecl.ogo
// ERROR "a redeclared in this block"
var a, a int // Non blank ('_') identifiers can appear only once in a scope, `init()` functions aside.
